// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders hasConnectionIssue 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <p data-v-56029fad=""> The document could not be loaded. Please check your internet connection. <a data-v-56029fad="" class="button primary">Reconnect</a></p>
</ncnotecard-stub>"
`;

exports[`renders idle 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="info" heading="" text="">
  <p data-v-56029fad=""> You've been disconnected from the server. <a data-v-56029fad="" class="button primary">Reconnect</a></p>
</ncnotecard-stub>"
`;

exports[`renders sync error 0 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <p data-v-56029fad=""> The file was overwritten. Your current changes cannot be auto-saved. Please choose how to proceed.
    <!---->
  </p>
</ncnotecard-stub>"
`;

exports[`renders sync error 1 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;

exports[`renders sync error 2 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <p data-v-56029fad=""> Error Message goes here <a data-v-56029fad="" class="button primary">Reload</a></p>
</ncnotecard-stub>"
`;

exports[`renders sync error 3 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;

exports[`renders sync error 4 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;

exports[`renders sync error 5 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;
